# pydantic-argparse

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  stylesheet.css  wrangler.jsonc
.github/workflows/: ci.yml  format.yml  lint.yml  linting.yml  test.yml  tests.yml  type.yml  typing.yml
background/: index.html
docs/: background.md  index.md  mkdocs.yml  showcase.md
docs/docs/: index.md
docs/docs/examples/: commands.md
docs/docs/reference/: reference.py
docs/docs/usage/: argument_parser.md  getting_started.md  models.md
docs/docs/usage/data_types/: standard.md
docs/examples/: simple.md
docs/reference/: reference.py
docs/usage/: argument_parser.md  arguments.md  commands.md
docs/usage/argument_types/: choices.md  commands.md  flags.md  singular.md  variadic.md
docs/usage/arguments/: choices.md  commands.md  flags.md  index.md  regular.md  variadic.md
docs/usage/data_types/: containers_mappings.md  enums_literals.md  flags.md
examples/: commands.py  simple.py
examples/commands/: index.html
examples/simple/: index.html
pydantic_argparse/: __init__.py  __metadata__.py  __pkginfo__.py  __version__.py  parser.py
pydantic_argparse/argparse/: __init__.py  actions.py  parser.py  patches.py
pydantic_argparse/cli/: __init__.py  cli.py  parser.py
pydantic_argparse/parser/: __init__.py  parser.py
pydantic_argparse/parsers/: __init__.py  boolean.py  command.py  container.py  enum.py  json.py  literal.py  mapping.py  standard.py
pydantic_argparse/utils/: __init__.py  arguments.py  errors.py  namespaces.py  pydantic.py  types.py  utils.py
pydantic_args/: __init__.py  __metadata__.py
pydantic_args/argparse/: __init__.py
pydantic_args/parsers/: container.py  mapping.py
pydantic_args/utils/: __init__.py  arguments.py  pydantic.py
reference/: reference.py
reference/SUMMARY/: index.html
reference/pydantic_argparse/: index.html
reference/pydantic_argparse/argparse/: index.html
reference/pydantic_argparse/argparse/actions/: index.html
reference/pydantic_argparse/argparse/parser/: index.html
reference/pydantic_argparse/argparse/patches/: index.html
reference/pydantic_argparse/compatibility/: index.html
reference/pydantic_argparse/compatibility/argparse/: index.html
reference/pydantic_argparse/compatibility/pydantic/: index.html
reference/pydantic_argparse/parsers/: index.html
reference/pydantic_argparse/parsers/boolean/: index.html
reference/pydantic_argparse/parsers/command/: index.html
reference/pydantic_argparse/parsers/container/: index.html
reference/pydantic_argparse/parsers/enum/: index.html
reference/pydantic_argparse/parsers/json/: index.html
reference/pydantic_argparse/parsers/literal/: index.html
reference/pydantic_argparse/parsers/mapping/: index.html
reference/pydantic_argparse/parsers/standard/: index.html
reference/pydantic_argparse/utils/: index.html
reference/pydantic_argparse/utils/arguments/: index.html
reference/pydantic_argparse/utils/errors/: index.html
reference/pydantic_argparse/utils/namespaces/: index.html
reference/pydantic_argparse/utils/pydantic/: index.html
reference/pydantic_argparse/utils/types/: index.html
reference/pydantic_argparse/utils/utils/: index.html
search/: search_index.json
showcase/: index.html
src/pydantic_argparse/: __init__.py  __metadata__.py
src/pydantic_argparse/argparse/: __init__.py  actions.py  parser.py  patches.py
src/pydantic_argparse/compatibility/: __init__.py  argparse.py  pydantic.py
src/pydantic_argparse/parsers/: __init__.py  boolean.py  command.py  container.py  enum.py  literal.py  mapping.py  standard.py
src/pydantic_argparse/test/: __init__.py  test.py
src/pydantic_argparse/utils/: __init__.py  arguments.py  errors.py  namespaces.py  pydantic.py  types.py
tests/: __init__.py  conftest.py  test_parser.py  test_pkginfo.py  test_version.py
tests/argparse/: test_actions.py  test_parser.py
tests/functional/: __init__.py  test_environment_variables.py
tests/parser/: __init__.py
tests/utils/: test_arguments.py  test_errors.py  test_namespaces.py  test_types.py  test_utils.py
usage/argument_parser/: index.html
usage/argument_types/: index.html
usage/argument_types/choices/: index.html
usage/argument_types/commands/: index.html
usage/argument_types/flags/: index.html
usage/argument_types/singular/: index.html
usage/argument_types/variadic/: index.html
usage/arguments/: index.html
usage/arguments/choices/: index.html
usage/arguments/commands/: index.html
usage/arguments/flags/: index.html
usage/arguments/regular/: index.html
usage/arguments/variadic/: index.html
usage/commands/: index.html
usage/data_types/containers_mappings/: index.html
usage/data_types/enums_literals/: index.html
usage/data_types/flags/: index.html
usage/data_types/standard/: index.html
usage/getting_started/: index.html
usage/models/: index.html
usage/parser/: index.html
