[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pydantic-argparse"
description = "Typed Argument Parsing with Pydantic"
authors = [{ name = "Hayden Richards", email = "supimdos@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Framework :: Pydantic',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
keywords = ["python", "pydantic", "argparse", "typed", "validation"]
dynamic = ["version"]

[project.urls]
Homepage = "https://pydantic-argparse.supimdos.com"
Documentation = "https://pydantic-argparse.supimdos.com"
Changelog = "https://github.com/SupImDos/pydantic-argparse/blob/master/CHANGELOG.md"
Repository = "https://github.com/SupImDos/pydantic-argparse"
Issues = "https://github.com/SupImDos/pydantic-argparse/issues"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pydantic_argparse/__metadata__.py"
build.targets.sdist.include = ["src/*", "LICENSE"]

[tool.hatch.envs.default]
installer = "uv"
path = ".venv"
dependencies = [
    # Linting
    "ruff",
    # Typing
    "mypy",
    # Tests
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "covdefaults",
    # Docs
    "mkdocs-material",
    "mkdocstrings[python-legacy]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-autorefs",
    # Build
    "build",
    "hatch",
]

[tool.hatch.envs.default.scripts]
format = "ruff format src tests docs examples {args}"
lint = "ruff check src tests docs examples {args}"
test = "pytest tests --cov=src {args}"
type = "mypy src tests docs examples {args}"
build = "hatch build {args}"
publish = "hatch publish {args}"
docs-serve = "mkdocs serve {args}"
docs-publish = "mkdocs gh-deploy --force {args}"

[tool.ruff]
line-length = 120
lint.select = [
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "I",    # isort
    "N",    # pep8-naming
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "D",    # pydocstyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "RUF",  # ruff
]
lint.ignore = [
    "D401",  # imperative mood - overly restrictive
    "S101",  # allow assertions
]
lint.isort.known-first-party = ["pydantic_argparse", "tests"]
lint.isort.forced-separate = ["typing"]
lint.pydocstyle.convention = "google"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.v1.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
plugins = ["covdefaults"]
